--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -3,5 +3,24 @@
   <display-name>testes_deploy</display-name>
   <welcome-file-list>    
     <welcome-file>index.jsp</welcome-file>    
-  </welcome-file-list>  
+  </welcome-file-list>
+  
+  <servlet>
+  	<servlet-name>Login</servlet-name>
+  	<servlet-class>controller.LoginController</servlet-class>  	
+  </servlet>
+  
+  <servlet>
+  	<servlet-name>Contatos</servlet-name>
+  	<servlet-class>controller.ContatosController</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+  		<servlet-name>Contatos</servlet-name>
+  		<url-pattern>/home</url-pattern>
+  		<url-pattern>/listar</url-pattern>
+  		<url-pattern>/cadastrar</url-pattern>
+  		<url-pattern>/excluir</url-pattern>  
+  </servlet-mapping>
+    
 </web-app>
