--- a/config.properties
+++ b/config.properties
@@ -1,4 +1,4 @@
 br.edu.qi.Driver = com.postgresql.Driver
-br.edu.qi.url = jdbc:postgres://localhost/t1n2
+br.edu.qi.url = jdbc:postgres://localhost/dbcontatos
 br.edu.qi.user = root
 br.edu.qi.pwd = .
